# src/main/resources/openapi.json
@@ -3,24 +3,22 @@
   "info": {
     "title": "Product API",
     "version": "1.0.0",
-    "description": "API for managing products in the barter system"
+    "description": "API for managing products and users in the barter system"
   },
-
   "servers": [
     {
       "url": "http://localhost:8080/api",
       "description": "Local server"
     },
-
     {
       "url": "https://barter-backend-w0ef.onrender.com/api",
       "description": "Deployed server"
     }
   ],
-
   "paths": {
     "/product/getAllProducts": {
       "get": {
+        "tags": ["product"],
         "summary": "Get all products",
         "operationId": "getAllProducts",
         "parameters": [
@@ -60,6 +58,7 @@
     },
     "/product/getProductById/{id}": {
       "get": {
+        "tags": ["product"],
         "summary": "Get product by ID",
         "operationId": "getProductById",
         "parameters": [
@@ -88,6 +87,7 @@
     },
     "/product/getProductByUserId/{userId}": {
       "get": {
+        "tags": ["product"],
         "summary": "Get products by user ID",
         "operationId": "getProductByUserId",
         "parameters": [
@@ -120,6 +120,7 @@
     },
     "/product/deleteProductById/{id}": {
       "delete": {
+        "tags": ["product"],
         "summary": "Delete product by ID",
         "operationId": "deleteProductById",
         "parameters": [
@@ -141,6 +142,7 @@
     },
     "/product/saveProduct": {
       "post": {
+        "tags": ["product"],
         "summary": "Save a new product",
         "operationId": "saveProduct",
         "requestBody": {
@@ -156,6 +158,122 @@
         "responses": {
           "201": {
             "description": "Product created successfully"
+          }
+        }
+      }
+    },
+    "/user/save": {
+      "post": {
+        "tags": ["user"],
+        "summary": "Save a new user",
+        "operationId": "saveUser",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveUserInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/getById/{id}": {
+      "get": {
+        "tags": ["user"],
+        "summary": "Get user by ID",
+        "operationId": "getUserById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User details",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/updateById": {
+      "put": {
+        "tags": ["user"],
+        "summary": "Update user by ID",
+        "operationId": "updateUserById",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SaveUserInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/deleteById/{id}": {
+      "delete": {
+        "tags": ["user"],
+        "summary": "Delete user by ID",
+        "operationId": "deleteUserById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -183,13 +301,12 @@
           "isbn": {
             "type": "integer",
             "format": "int64",
-            "example":9780140328721
-
+            "example": 9780140328721
           },
           "userId": {
             "type": "string",
             "format": "uuid",
-            "example":"3d59e121-d132-4de5-b737-60a5ac820a63"
+            "example": "3d59e121-d132-4de5-b737-60a5ac820a63"
           }
         }
       },
@@ -251,7 +368,35 @@
             "$ref": "#/components/schemas/Product"
           }
         }
+      },
+      "SaveUserInput": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+
+          "profileImage": {
+            "type": "string"
+          },
+          "age": {
+            "type": "integer"
+          }
+        }
       }
     }
-  }
+  },
+  "tags": [
+    {
+      "name": "product",
+      "description": "Operations related to products"
+    },
+    {
+      "name": "user",
+      "description": "Operations related to users"
+    }
+  ]
 }
